--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Andoro's Space
 email: baic0003@e.ntu.edu.sg
 description: "Mechanical & Robotics Engineer | NTU Singapore"
-# url: "https://yourusername.github.io" # 본인 주소로 변경
+url: "https://Anony-doro.github.io" # 본인 주소로 변경
 
 # Author Info
 #twitter_username: username
@@ -72,7 +72,7 @@ author:
     
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/Anony-doro"
 
 # _config.yml 파일 하단에 추가 또는 수정
 
@@ -83,7 +83,7 @@ footer:
       url: "mailto:baic0003@e.ntu.edu.sg"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://linkedin.com/in/본인아이디"
+      url: "https://www.linkedin.com/in/geunmyeong-baick/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Anony-doro"
